# keypoints-detector-JAX

./: README.md  pyproject.toml  start.py
scripts/: inference.py  training.py
src/config/: __init__.py
src/dataset/: __init__.py  dataset.py
src/debugging/: __init__.py  debugging.py
src/model/: __init__.py  model.py
src/utils/: __init__.py  utils.py
